--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,37 +1,36 @@
-name: Build and Publish Python Package
+name: Publish to PyPI
 
 on:
-  push:
-    tags:
-      - 'v*' 
+  release:
+    types: [published]
 
 permissions:
+  id-token: write
   contents: read
 
 jobs:
-  build-and-publish:
+  publish:
+    name: Publish package to PyPI
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Install packaging tools
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel twine
+          python -m pip install --upgrade build
 
-      - name: Build the distribution
+      - name: Build package
         run: |
-          python setup.py sdist bdist_wheel
+          python -m build
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: ${{ secrets.PYPI_USERNAME }}
-          password: ${{ secrets.PYPI_PASSWORD }}
+          skip-existing: true
 
