--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -13,11 +13,14 @@ permissions:
 
 jobs:
   publish:
-    name: Publish package to PyPI
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
+
+      - name: Debug: Show repo files
+        run: |
+          pwd
+          ls -l
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -25,15 +28,14 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade build
+        run: python -m pip install --upgrade build
 
       - name: Build package
-        run: |
-          python -m build
+        run: python -m build
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           skip-existing: true
+
 
