--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: spatial-kfold
-site_url: https://your-username.github.io/spatial-kfold/
+site_url: https://WalidGharianiEAGLE.github.io/spatial-kfold
 repo_url: https://github.com/WalidGharianiEAGLE/spatial-kfold
 repo_name: WalidGharianiEAGLE/spatial-kfold
 
