--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs-material mkdocs jupyter
+          pip install mkdocs-material mkdocs mkdocs-jupyter
 
       - name: Build MkDocs site
         run: mkdocs build
